Update sidebar affordability prompt to match working direct query

--- a/budget-ui/public/index.html
+++ b/budget-ui/public/index.html
@@ -1231,7 +1231,7 @@
                     <div class="sidebar-action-icon">📊</div>
                     <div class="sidebar-action-text">Analyze Spending</div>
                 </button>
-                <button class="sidebar-action-btn" onclick="runAction('Show me my available spending money and discretionary fund balances')">
+                <button class="sidebar-action-btn" onclick="runAction('Show me my Ready to Assign balance and category balances with remaining funds')">
                     <div class="sidebar-action-icon">🎯</div>
                     <div class="sidebar-action-text">What Can I Afford?</div>
                 </button>
